--- a/pure_frontal/views/html-to-string.html
+++ b/pure_frontal/views/html-to-string.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="util.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery-2.1.1.js"></script>
+    <script type="text/javascript" src="../js/util.js"></script>
     <title>Html to String</title>
     <script type="text/script">
     </script>
@@ -17,20 +18,23 @@
         height:30px;
     }
 </style> -->
+
 <body>
     <div style="height:600px;">
-    <span>html to string</span>
-        <textarea style="width: 100%;height: 300px;font-size: 20px;float: left"  id="sourceText"></textarea>
+        <span>html to string</span>
+        <textarea style="width: 100%;height: 300px;font-size: 20px;float: left" id="sourceText"></textarea>
         <div style="text-align: center;">
             <button id="htmlToStr" style="width: 70px;height: 29px;" onclick="htmlToStr()">toString</button>
             <button id="strToHtml" style="width: 70px;height: 29px;margin-top: 5px;margin-bottom: 5px;" onclick="strToHtml()">toHtml</button>
-            <button id="strToHtml" style="width: 70px;height: 29px;margin-top: 5px;margin-bottom: 5px;" onclick="forTemp()">Temp</button>
+            <!-- 自己加校验，例如正则 -->
+            <!-- <button id="strToHtml" style="width: 70px;height: 29px;margin-top: 5px;margin-bottom: 5px;" onclick="forTemp()">Temp</button> -->
         </div>
         <textarea style="width: 100%;height: 400px;font-size: 20px;float: left;" id="processedText"></textarea>
         <div style="width:400px;height:400px;">
-        <span>样式内容</span>
-        <div id="showDom" style="width: 400px;height: 400px; border:1px solid #000"></div>
+            <span>样式内容</span>
+            <div id="showDom" style="width: 400px;height: 400px; border:1px solid #000"></div>
         </div>
     </div>
 </body>
+
 </html>
